fix: alignement vertical nécessaire des cartes en mode rectoVerso

--- a/css/print.css
+++ b/css/print.css
@@ -28,6 +28,13 @@
 		justify-content: center;
 	}
 
+	.printPage--flashcard.printPage--rectoVerso {
+		align-content: center;
+		align-items: center;
+		height: 210mm;
+		padding: 0 !important;
+	}
+
 	.printPage:last-child {
 		page-break-after: avoid;
 		break-after: avoid;
